# line-diff

./: LineDiff.hs  cabal.project  line-diff.cabal
