Name:                line-diff
Version:             0.1.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2019 Merijn Verstraaten

License:             GPL-3
License-File:        LICENSE

Category:            System
Cabal-Version:       >= 1.10
Build-Type:          Simple
Tested-With:         GHC == 8.4

Synopsis:            

Description:

Data-Files:             

Extra-Source-Files:     

Executable line-diff
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind
  GHC-Prof-Options:     -fprof-auto
  Hs-Source-Dirs:       .
  Main-Is:              LineDiff.hs
  Other-Modules:      

  Build-Depends:        base
               ,        Diff == 0.3.*
               ,        conduit == 1.3.*
               ,        prettyprinter == 1.2.*
               ,        prettyprinter-ansi-terminal == 1.1.*
               ,        text == 1.2.*

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/line-diff
